HttpServer/kubernetes-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnetserver
  labels:
    run: dotnetserver
spec:
  ports:
  - port: 5001
    protocol: TCP
  selector:
    run: dotnetserver
